# UDC-DiscordBots

./: .gitignore  README.md
UDC_Announce/: Dockerfile  docker-compose.yaml  requirements.txt
UDC_Announce/bot/: announce.py  main.py
UDC_Card-Mining/: .gitignore  docker-compose.yaml  requirements.txt
UDC_Card-Mining/bot/: main.py
UDC_Card-Recruitment/: docker-compose.yaml
UDC_Card-Recruitment/bot/: card-recruitment.py  main.py  save.py
UDC_Information/: before.py  docker-compose.yaml  requirements.txt
UDC_Information/bot/: information.py  main.py
UDC_Matching/: docker-compose.yaml  requirements.txt
UDC_Matching/bot/: matching.py
UDC_PDFmaker/: Dockerfile  docker-compose.yaml  pdfbot.py  pdfgene.py  pyproject.toml  requirements.txt
UDC_PDFmaker/bot/: pdfbot.py  pdfgene.py
UDC_Recruitment/bot/: main.py
