[project]
name = "udc-pdfmaker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "discord-py==2.4.0",
    "frozenlist==1.4.1",
    "h11==0.14.0",
    "idna==3.10",
    "multidict==6.1.0",
    "numpy==2.1.2",
    "opencv-python==4.10.0.84",
    "outcome==1.3.0.post0",
    "pillow==10.4.0",
    "propcache==0.2.0",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "selenium==4.25.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio-websocket==0.11.1",
    "trio==0.26.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "yarl==1.15.0",
]
